[package]
name = "umami_metrics"
version = "0.1.0"
edition = "2021"

[badges.maintenance]
status = "actively-developed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
reqwest = "0.11.11"
serde = {version = "1.0.140", features = ["derive"]}
serde_json = "1.0.82"

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
version-sync = "0.9.4"
